services/linkerd-ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: l5d
  # namespace: l5d-system
spec:
  selector:
    app: l5d
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  - name: admin
    port: 9990
