services/linkerd-ingress/world.v2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: world-v2
  template:
    metadata:
      labels:
        app: world-v2
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/helloworld:0.1.6
        imagePullPolicy: IfNotPresent
        args:
        - "-addr=:7778"
        ports:
        - name: service
          containerPort: 7778
---
apiVersion: v1
kind: Service
metadata:
  name: world-v2
spec:
  selector:
    app: world-v2
  clusterIP: None
  ports:
  - name: http
    port: 7778
